--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,12 @@ body {
 }
 
 a {
-  color: #18d26e;
+  color: #C12C2D;
   transition: 0.5s;
 }
 
 a:hover, a:active, a:focus {
-  color: #18d36e;
+  color: #3A2E97;
   outline: none;
   text-decoration: none;
 }
@@ -41,7 +41,7 @@ h1, h2, h3, h4, h5, h6 {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #18d26e;
+  background: #3A2E97;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -84,7 +84,7 @@ h1, h2, h3, h4, h5, h6 {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #18d26e;
+  border-top: 6px solid #C12C2D;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -138,11 +138,15 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   letter-spacing: 3px;
   padding-left: 10px;
-  border-left: 4px solid #18d26e;
+  border-left: 4px solid #fff;
 }
 
 #header .logo a {
-  color: #fff;
+  color: #C12C2D;
+}
+
+#header .logo .logo-bridge{
+color: #000;
 }
 
 #header .logo img {
@@ -187,7 +191,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
-  color: #18d26e;
+  color: #C12C2D;
 }
 
 .nav-menu .drop-down ul {
@@ -223,7 +227,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu .drop-down ul a:hover, .nav-menu .drop-down ul .active > a, .nav-menu .drop-down ul li:hover > a {
-  color: #18d26e;
+  color: #3A2E97;
 }
 
 .nav-menu .drop-down > a:after {
@@ -318,7 +322,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
-  color: #18d26e;
+  color: #3A2E97;
   text-decoration: none;
 }
 
@@ -509,12 +513,11 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.5s;
   margin: 10px;
   color: #fff;
-  background: #18d26e;
+  background: #C12C2D;
 }
 
 #intro .btn-get-started:hover {
-  background: #fff;
-  color: #18d26e;
+  background: #3A2E97;
 }
 
 /*--------------------------------------------------------------
@@ -553,7 +556,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #18d26e;
+  background: #C12C2D;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -639,7 +642,7 @@ section {
 }
 
 #featured-services i {
-  color: #18d26e;
+  color: #C12C2D;
   font-size: 48px;
   display: inline-block;
   line-height: 1;
@@ -656,7 +659,7 @@ section {
 }
 
 #featured-services h4 a:hover {
-  color: #18d26e;
+  color: #3A2E97;
 }
 
 #featured-services p {
@@ -712,7 +715,7 @@ section {
   padding-top: 8px;
   text-align: center;
   position: absolute;
-  background-color: #18d26e;
+  background-color: #C12C2D;
   border-radius: 50%;
   text-align: center;
   border: 4px solid #fff;
@@ -729,11 +732,7 @@ section {
 }
 
 #about .about-col:hover .icon {
-  background-color: #fff;
-}
-
-#about .about-col:hover i {
-  color: #18d26e;
+  background-color: #3A2E97;
 }
 
 #about .about-col h2 {
@@ -750,15 +749,21 @@ section {
 }
 
 #about .about-col h2 a:hover {
-  color: #18d26e;
+  color: #3A2E97;
 }
 
 #about .about-col p {
-  font-size: 14px;
+  font-size: small;
   line-height: 24px;
   color: #333;
-  margin-bottom: 0;
+  margin-bottom: 10px;
   padding: 0 20px 20px 20px;
+}
+
+#about .about-col ul {
+  font-size: small;
+  padding-right: 20px;
+  padding-bottom: 20px;
 }
 
 /* Services Section
@@ -778,7 +783,7 @@ section {
 }
 
 #services .icon i {
-  color: #18d26e;
+  color: #3A2E97;
   font-size: 36px;
   line-height: 1;
   transition: 0.5s;
@@ -796,7 +801,7 @@ section {
 }
 
 #services .box:hover .title a {
-  color: #18d26e;
+  color: #C12C2D;
 }
 
 #services .description {
@@ -840,8 +845,8 @@ section {
 }
 
 #call-to-action .cta-btn:hover {
-  background: #18d26e;
-  border: 2px solid #18d26e;
+  background: #3A2E97;
+  border: 2px solid #3A2E97;
 }
 
 /* Call To Action Section
@@ -905,7 +910,7 @@ section {
   font-weight: bold;
   font-size: 48px;
   display: block;
-  color: #18d26e;
+  color: #C12C2D;
 }
 
 #facts .counters p {
@@ -950,7 +955,7 @@ section {
 }
 
 #portfolio #portfolio-flters li:hover, #portfolio #portfolio-flters li.filter-active {
-  background: #18d26e;
+  background: #3A2E97;
   color: #fff;
 }
 
@@ -1007,7 +1012,7 @@ section {
 }
 
 #portfolio .portfolio-item figure .link-preview:hover, #portfolio .portfolio-item figure .link-details:hover {
-  background: #18d26e;
+  background: #3A2E97;
 }
 
 #portfolio .portfolio-item figure .link-preview:hover i, #portfolio .portfolio-item figure .link-details:hover i {
@@ -1055,7 +1060,7 @@ section {
 }
 
 #portfolio .portfolio-item .portfolio-info h4 a:hover {
-  color: #18d26e;
+  color: #3A2E97;
 }
 
 #portfolio .portfolio-item .portfolio-info p {
@@ -1097,7 +1102,7 @@ section {
 }
 
 .portfolio-details .portfolio-details-carousel .owl-dot.active {
-  background-color: #18d26e !important;
+  background-color: #C12C2D !important;
 }
 
 .portfolio-details .portfolio-info {
@@ -1185,7 +1190,7 @@ section {
 }
 
 #clients .owl-dot.active {
-  background-color: #18d26e;
+  background-color: #C12C2D;
 }
 
 /* Testimonials Section
@@ -1263,7 +1268,7 @@ section {
 }
 
 #testimonials .owl-dot.active {
-  background-color: #18d26e;
+  background-color: #C12C2D;
 }
 
 /* Team Section
@@ -1333,7 +1338,7 @@ section {
 }
 
 #team .member .social a:hover {
-  color: #18d26e;
+  color: #3A2E97;
 }
 
 #team .member .social i {
@@ -1352,7 +1357,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #18d26e;
+  color: #3A2E97;
   float: left;
   width: 44px;
   height: 44px;
@@ -1376,7 +1381,7 @@ section {
   padding: 0 0 0 60px;
   margin-bottom: 0;
   font-size: 14px;
-  color: #18d26e;
+  color: #3A2E97;
 }
 
 .contact .info .email p {
@@ -1403,12 +1408,12 @@ section {
 }
 
 .contact .info .social-links a:hover {
-  background: #1bac91;
+  background: #3A2E97;
   color: #fff;
 }
 
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #1bac91;
+  background: #3A2E97;
   color: #fff;
 }
 
@@ -1447,7 +1452,7 @@ section {
 .contact .php-email-form .sent-message {
   display: none;
   color: #fff;
-  background: #18d26e;
+  background: #3A2E97;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -1467,7 +1472,7 @@ section {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
+  border: 3px solid #3A2E97;
   border-top-color: #eee;
   -webkit-animation: animate-loading 1s linear infinite;
   animation: animate-loading 1s linear infinite;
@@ -1488,7 +1493,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #18d26e;
+  background: #3A2E97;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1497,7 +1502,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: #22d8b6;
+  background: #3A2E97;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1545,7 +1550,7 @@ section {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
   letter-spacing: 3px;
-  border-left: 4px solid #18d26e;
+  border-left: 4px solid #C12C2D;
 }
 
 #footer .footer-top .footer-info p {
@@ -1572,7 +1577,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #18d26e;
+  background: #3A2E97;
   color: #fff;
 }
 
@@ -1599,7 +1604,7 @@ section {
 }
 
 #footer .footer-top h4::after {
-  background: #18d26e;
+  background: #C12C2D;
   width: 60px;
 }
 
@@ -1632,7 +1637,7 @@ section {
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  color: #18d26e;
+  color: #3A2E97;
 }
 
 #footer .footer-top .footer-contact {
@@ -1654,7 +1659,7 @@ section {
 }
 
 #footer .footer-top .footer-newsletter input[type="submit"] {
-  background: #18d26e;
+  background: #3A2E97;
   border: 0;
   width: 35%;
   padding: 6px 0;
@@ -1665,7 +1670,7 @@ section {
 }
 
 #footer .footer-top .footer-newsletter input[type="submit"]:hover {
-  background: #13a456;
+  background: #C12C2D;
 }
 
 #footer .copyright {
