--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,7 @@ h1, h2, h3, h4, h5, h6 {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -105,6 +106,7 @@ h1, h2, h3, h4, h5, h6 {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -117,7 +119,7 @@ h1, h2, h3, h4, h5, h6 {
   transition: all 0.5s;
   z-index: 997;
   padding: 26px 0;
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 0.85);
 }
 
 #header.header-transparent {
@@ -125,7 +127,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header.header-scrolled {
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 0.85);
   padding: 18px 0;
 }
 
@@ -145,8 +147,8 @@ h1, h2, h3, h4, h5, h6 {
   color: #C12C2D;
 }
 
-#header .logo .logo-bridge{
-color: #000;
+#header .logo .logo-bridge {
+  color: #000;
 }
 
 #header .logo img {
@@ -169,11 +171,11 @@ color: #000;
   list-style: none;
 }
 
-.nav-menu > ul {
+.nav-menu>ul {
   display: flex;
 }
 
-.nav-menu > ul > li {
+.nav-menu>ul>li {
   position: relative;
   white-space: nowrap;
   padding: 10px 0 10px 28px;
@@ -190,7 +192,7 @@ color: #000;
   font-weight: 600;
 }
 
-.nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
+.nav-menu a:hover, .nav-menu .active>a, .nav-menu li:hover>a {
   color: #C12C2D;
 }
 
@@ -208,7 +210,7 @@ color: #000;
   transition: 0.3s;
 }
 
-.nav-menu .drop-down:hover > ul {
+.nav-menu .drop-down:hover>ul {
   opacity: 1;
   top: 100%;
   visibility: visible;
@@ -226,11 +228,11 @@ color: #000;
   color: #333333;
 }
 
-.nav-menu .drop-down ul a:hover, .nav-menu .drop-down ul .active > a, .nav-menu .drop-down ul li:hover > a {
+.nav-menu .drop-down ul a:hover, .nav-menu .drop-down ul .active>a, .nav-menu .drop-down ul li:hover>a {
   color: #3A2E97;
 }
 
-.nav-menu .drop-down > a:after {
+.nav-menu .drop-down>a:after {
   content: "\ea99";
   font-family: IcoFont;
   padding-left: 5px;
@@ -241,17 +243,17 @@ color: #000;
   left: calc(100% - 30px);
 }
 
-.nav-menu .drop-down .drop-down:hover > ul {
+.nav-menu .drop-down .drop-down:hover>ul {
   opacity: 1;
   top: 0;
   left: 100%;
 }
 
-.nav-menu .drop-down .drop-down > a {
+.nav-menu .drop-down .drop-down>a {
   padding-right: 35px;
 }
 
-.nav-menu .drop-down .drop-down > a:after {
+.nav-menu .drop-down .drop-down>a:after {
   content: "\eaa0";
   font-family: IcoFont;
   position: absolute;
@@ -262,10 +264,12 @@ color: #000;
   .nav-menu .drop-down .drop-down ul {
     left: -90%;
   }
-  .nav-menu .drop-down .drop-down:hover > ul {
+
+  .nav-menu .drop-down .drop-down:hover>ul {
     left: -100%;
   }
-  .nav-menu .drop-down .drop-down > a:after {
+
+  .nav-menu .drop-down .drop-down>a:after {
     content: "\ea9d";
   }
 }
@@ -321,12 +325,12 @@ color: #000;
   outline: none;
 }
 
-.mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
+.mobile-nav a:hover, .mobile-nav .active>a, .mobile-nav li:hover>a {
   color: #3A2E97;
   text-decoration: none;
 }
 
-.mobile-nav .drop-down > a:after {
+.mobile-nav .drop-down>a:after {
   content: "\ea99";
   font-family: IcoFont;
   padding-left: 10px;
@@ -334,11 +338,11 @@ color: #000;
   right: 15px;
 }
 
-.mobile-nav .active.drop-down > a:after {
+.mobile-nav .active.drop-down>a:after {
   content: "\eaa1";
 }
 
-.mobile-nav .drop-down > a {
+.mobile-nav .drop-down>a {
   padding-right: 35px;
 }
 
@@ -410,7 +414,7 @@ color: #000;
 
 #intro .carousel-item::before {
   content: '';
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.65);
 }
 
 #intro .carousel-container {
@@ -422,6 +426,34 @@ color: #000;
   top: 70px;
   left: 50px;
   right: 50px;
+}
+
+#advertise .advertise-text {
+  position: absolute;
+  padding: 20px;
+  color: #fff;
+  width: 60%;
+  text-align: end;
+  width: 100%;
+}
+
+#advertise .advertise-text h3 {
+  font-weight: bolder;
+  line-height: 40px;
+
+}
+
+#advertise .caption-box {
+  margin-bottom: -65px;
+  padding: 20px;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(90deg, rgb(255 255 255 / 84%) 0%, rgb(225 235 243 / 43%) 45%, rgb(255 255 255 / 11%) 63%, rgb(255 255 255 / 0%) 77%);
+}
+
+#advertise .advertise-item {
+  background: url("../img/advertise.jpg") no-repeat;
+  padding: 510px 0 55px 0;
+  background-size: cover;
 }
 
 #intro .container {
@@ -604,11 +636,11 @@ section {
   font-size: 14px;
 }
 
-.breadcrumbs ol li + li {
+.breadcrumbs ol li+li {
   padding-left: 10px;
 }
 
-.breadcrumbs ol li + li::before {
+.breadcrumbs ol li+li::before {
   display: inline-block;
   padding-right: 10px;
   color: #6c757d;
@@ -619,9 +651,11 @@ section {
   .breadcrumbs .d-flex {
     display: block !important;
   }
+
   .breadcrumbs ol {
     display: block;
   }
+
   .breadcrumbs ol li {
     display: inline-block;
   }
@@ -672,8 +706,8 @@ section {
 /* About Us Section
 --------------------------------*/
 #about {
-  background: url("../img/about-bg.jpg") center top no-repeat fixed;
-  background-size: cover;
+  background: url("../img/about-bg.png") center top no-repeat fixed;
+  background-size: contain;
   padding: 60px 0 40px 0;
   position: relative;
 }
@@ -685,7 +719,7 @@ section {
   right: 0;
   top: 0;
   bottom: 0;
-  background: rgba(255, 255, 255, 0.92);
+  background: rgba(255, 255, 255, 0.90);
   z-index: 9;
 }
 
@@ -694,11 +728,16 @@ section {
   z-index: 10;
 }
 
+#about .about-us {
+  font-weight: 400;
+}
+
 #about .about-col {
   background: #fff;
   border-radius: 0 0 4px 4px;
   box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
   margin-bottom: 20px;
+  height: 460px;
 }
 
 #about .about-col .img {
@@ -719,7 +758,7 @@ section {
   border-radius: 50%;
   text-align: center;
   border: 4px solid #fff;
-  left: calc( 50% - 32px);
+  left: calc(50% - 32px);
   bottom: -30px;
   transition: 0.3s;
 }
@@ -1129,7 +1168,7 @@ section {
   font-size: 15px;
 }
 
-.portfolio-details .portfolio-info ul li + li {
+.portfolio-details .portfolio-info ul li+li {
   margin-top: 10px;
 }
 
@@ -1152,6 +1191,7 @@ section {
   .portfolio-details .portfolio-description h2 {
     width: 100%;
   }
+
   .portfolio-details .portfolio-info {
     position: static;
     margin-top: 30px;
@@ -1445,7 +1485,7 @@ section {
   font-weight: 600;
 }
 
-.contact .php-email-form .error-message br + br {
+.contact .php-email-form .error-message br+br {
   margin-top: 25px;
 }
 
@@ -1509,6 +1549,7 @@ section {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -1518,6 +1559,7 @@ section {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -1554,11 +1596,16 @@ section {
 }
 
 #footer .footer-top .footer-info p {
-  font-size: 14px;
-  line-height: 24px;
+  font-size: small;
   margin-bottom: 0;
   font-family: "Montserrat", sans-serif;
   color: #eee;
+  text-align: justify;
+}
+
+#footer .footer-info .footer-logo {
+  width: 50%;
+  padding-bottom: 10px;
 }
 
 #footer .footer-top .social-links a {
