--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -414,7 +414,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #intro .carousel-item::before {
   content: '';
-  background-color: rgba(0, 0, 0, 0.65);
+  background-color: rgba(37, 72, 123, 0.45);
 }
 
 #intro .carousel-container {
@@ -461,7 +461,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #intro h2 {
-  color: #fff;
+  color: #ffffff96;
   margin-bottom: 30px;
   font-size: 48px;
   font-weight: 700;
@@ -545,7 +545,7 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.5s;
   margin: 10px;
   color: #fff;
-  background: #C12C2D;
+  background: #c12c2d9e;
 }
 
 #intro .btn-get-started:hover {
@@ -1018,9 +1018,9 @@ section {
 }
 
 #portfolio .portfolio-item figure {
-  background: #000;
+  background: #fff;
   overflow: hidden;
-  height: 240px;
+  height: 250px;
   position: relative;
   border-radius: 4px 4px 0 0;
   margin: 0;
@@ -1203,6 +1203,9 @@ section {
 #clients {
   padding: 60px 0;
 }
+#clients .owl-stage-outer{
+  height: 100px;
+}
 
 #clients img {
   max-width: 100%;
@@ -1230,7 +1233,22 @@ section {
 }
 
 #clients .owl-dot.active {
-  background-color: #C12C2D;
+  background-color: #3A2E97;
+}
+#clients .owl-item{
+  width:310px !important;
+}
+
+#clients .client-card{
+  background-color: #3A2E97;
+  padding: 10px;
+  width: 300px;
+  height: 100px;
+}
+
+#clients .client-card p{
+  color: #fff;
+  font-size: 11px;
 }
 
 /* Testimonials Section
